# rpi-pico-macos-starter

./: CMakeLists.txt  README.md  hello_world.c
